[gd_scene load_steps=3 format=3 uid="uid://c5q8ju4y6wbl4"]

[ext_resource type="Script" path="res://Scripts/UI/jdciv_sequence.gd" id="1_5807g"]
[ext_resource type="Texture2D" uid="uid://br4826vjaa4d0" path="res://Assets/Images/StudioImages/IV.png" id="2_jdv2o"]

[node name="JDCIVSequence" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5807g")

[node name="JDCIVCanvasLayer" type="CanvasLayer" parent="."]

[node name="IVTextureRect" type="TextureRect" parent="JDCIVCanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -235.0
offset_top = -239.0
offset_right = 265.0
offset_bottom = 261.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_jdv2o")
expand_mode = 1
stretch_mode = 6
metadata/_edit_use_anchors_ = true

[node name="TopColorRect" type="ColorRect" parent="JDCIVCanvasLayer"]
offset_right = 1920.0
offset_bottom = 540.0
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="BottomColorRect" type="ColorRect" parent="JDCIVCanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -540.0
offset_right = 1920.0
grow_vertical = 0
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true
